examples/v05/checked-mir/reject/use_after_consume_in_block.hew
// Reject fixture for `MirCheck::UseAfterConsume` inside a block
// expression.
//
// The nested block consumes `s` via `let t = s` (string is a
// non-`BitCopy` value class). The trailing `let _u = s` then reads
// `s` after the move. Before nested-statement lowering reached the
// move-checker, the program emitted a binary that exited 42; now
// Checked MIR rejects with `E_MIR_CHECK ... UseAfterConsume` and
// emits no artefact.
fn main() -> i64 {
    {
        let s = "hello";
        let t = s;
        let _u = s;
    };
    return 42;
}
